.kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tabpy
  name: tabpy-server
spec:
  selector:
    matchLabels:
      app: tabpy-server
  template:
    metadata:
      labels:
        app: tabpy-server
    spec:
      containers:
        - name: tabpy-server
          image: plattform.azurecr.io/tabpy/server:prod-build-9
          ports:
            - containerPort: 9004
          resources:
            limits:
              memory: 400M
              cpu: 100m
      restartPolicy: Always
