.kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tabpy-server
spec:
  externalTrafficPolicy: Cluster
  type: LoadBalancer
  sessionAffinity: None
  selector:
    app: tabpy-server
  ports:
    - protocol: TCP
      name: tabpy
      port: 9004
      targetPort: 9004
