.kube/service_copy.yml
apiVersion: v1
kind: Service
metadata:
  name: webconnector
spec:
  type: NodePort
  selector:
    app: tabpy-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  type: NodePort
  selector:
    app: tabpy-server
  ports:
    - protocol: TCP
      port: 8889
      targetPort: 8889
---
apiVersion: v1
kind: Service
metadata:
  name: tabpy
spec:
  type: NodePort
  selector:
    app: tabpy-server
  ports:
     - protocol: TCP
       port: 9004
       targetPort: 9004
