.kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tabpy-server
spec:
  rules:
    - host: tabpy.intern-we.drift.azure.nrk.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: tabpy-server
              servicePort: 9004
  tls:
    - hosts:
        - tabpy-server.intern-we.drift.azure.nrk.cloud
